# Agile-Software-Development

./: .gitignore  pyproject.toml
src/ch10/10-4/: sets.py
src/ch10/after_refactor/: main.py  sets.py
src/ch10/before_refactor/: main.py  sets.py
src/ch11/ex1/before_refactor/: button.py  lamp.py  main.py
src/ch11/example1/after_refactor/: button.py  lamp.py  switchable_device.py
src/ch11/example1/before_refactor/: button.py  lamp.py
src/ch11/example2/after_refactor/: controller.py  heater.py  io_channel_heater.py  io_channel_thermometer.py  thermometer.py
src/ch11/example2/before_refactor/: consts.py  controller.py  furnace.py  main.py  thermometer.py
src/ch5/: generate_primes_v1.py  generate_primes_v2.py  generate_primes_v3.py  generate_primes_v4.py
src/ch9/fig_1/: client.py  main.py  server.py
src/ch9/fig_2/: client.py  client_interface.py  main.py  server.py
src/ch9/fig_3/: main.py  policy.py
src/ch9/shape_app/1/: circle.py  draw_all_shapes.py  main.py  shape.py  square.py
src/ch9/shape_app/2/: circle.py  draw_all_shapes.py  main.py  shape.py
src/ch9/shape_app/order_shape/: draw_all_shapes.py  main.py  shape.py  square.py  test.py
tests/ch5/: test_generate_primes_v2.py  test_generate_primes_v3.py  test_generate_primes_v4.py
