[project]
name = "agile-software-development"
version = "0.1.0"
description = ""
authors = [
    {name = "kensuz14",email = "kentasuzuki5555@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[tool.pytest.ini_options]
pythonpath = "src"